Upgrade nav and page products (19.04.2021)

--- a/Carlos/index.html
+++ b/Carlos/index.html
@@ -22,20 +22,28 @@
        <nav class="navbar">
            <ul class="menu-list">
                 <li class="menu-item">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="menu-item">
                     <a href="products/products.html">Products</a>
                 </li>
-                <li class="menu-item">
-                    <a href="components/buttons/buttons.html">Buttons</a>
-                </li>
-                <li class="menu-item">
-                    <a href="components/cards/cards.html">Cards</a>
-                </li>
-                <li class="menu-item">
-                    <a href="components/forms/index.html">Forms</a>
-                </li>
-                <li class="menu-item">
-                    <a href="components/sidebar/dashboard.html">Sidebar</a>
-                </li>     
+                <li class="menu__item--expandable">
+                    <span>Components</span>
+                    <ul class="menu__dropdown menu__list">
+                        <li class="dropdown__item">
+                            <a href="components/buttons/buttons.html">Buttons</a>
+                        </li>
+                        <li class="dropdown__item">
+                            <a href="components/cards/cards.html">Cards</a>
+                        </li>
+                        <li class="dropdown__item">
+                            <a href="components/forms/index.html">Forms</a>
+                        </li>
+                        <li class="dropdown__item">
+                            <a href="components/sidebar/dashboard.html">Sidebar</a>
+                        </li>
+                    </ul>
+                </li>   
                 <li class="menu-item">
                     <a href="register.html" class="button is-success">Login</a>
                 </li>   
@@ -72,7 +80,7 @@
               <input type="radio" name="position" />
               <input type="radio" name="position" />
               <main id="carousel">
-            <div class="item"><img src="img/products-img/Sapatos_Stan_Smith.jpg" style="border: 1px solid rgb(150, 150, 150);"></div>
+            <div class="item"><a href="products/product-1.html"><img src="img/products-img/Sapatos_Stan_Smith.jpg" style="border: 1px solid rgb(150, 150, 150);"></a></div>
             <div class="item"><img src="img/products-img/Sapatos_Stan_Smith_Branc.jpg" style="border: 1px solid rgb(150, 150, 150);"></a></div>
             <div class="item"><img src="img/products-img/Sapatos_Stan_Smith_Branco.jpg" style="border: 1px solid rgb(150, 150, 150);"></div>
             <div class="item"><img src="img/products-img/Sapatos_Stan_Smith_Branco.jpg" style="border: 1px solid rgb(150, 150, 150);"></div>
