--- a/Carlos/products/products.html
+++ b/Carlos/products/products.html
@@ -24,28 +24,36 @@
                 </span>
             </figure> 
         </a>
-           <nav class="navbar">
-               <ul class="menu-list">
-                    <li class="menu-item">
-                        <a href="products.html">Products</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="../components/buttons/buttons.html">Buttons</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="../components/cards/cards.html">Cards</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="../components/forms/index.html">Forms</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="../components/sidebar/dashboard.html">Sidebar</a>
-                    </li>     
-                    <li class="menu-item">
-                        <a href="../register.html" class="button is-success">Login</a>
-                    </li>   
-               </ul>
-           </nav>
+        <nav class="navbar">
+            <ul class="menu-list">
+                 <li class="menu-item">
+                     <a href="../index.html">Home</a>
+                 </li>
+                 <li class="menu-item">
+                     <a href="products.html">Products</a>
+                 </li>
+                 <li class="menu__item--expandable">
+                     <span>Components</span>
+                     <ul class="menu__dropdown menu__list">
+                         <li class="dropdown__item">
+                             <a href="../components/buttons/buttons.html">Buttons</a>
+                         </li>
+                         <li class="dropdown__item">
+                             <a href="../components/cards/cards.html">Cards</a>
+                         </li>
+                         <li class="dropdown__item">
+                             <a href="../components/forms/index.html">Forms</a>
+                         </li>
+                         <li class="dropdown__item">
+                             <a href="../components/sidebar/dashboard.html">Sidebar</a>
+                         </li>
+                     </ul>
+                 </li>   
+                 <li class="menu-item">
+                     <a href="register.html" class="button is-success">Login</a>
+                 </li>   
+            </ul>
+        </nav>
     </header>
     <nav class="nav2">
         <ul>
