--- a/Carlos/products/product-1.html
+++ b/Carlos/products/product-1.html
@@ -12,148 +12,97 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
-  <link rel="stylesheet" href="../css/main.css" />
-  <link rel="stylesheet" href="../css/products.css" />
+    <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/product.css" />
 </head>
 
 <body>
   <header class="header">
-    <div class="navbar-wrapper">
-      <a href="index.html">
-        <figure class="logo">
-          <img src="images/company_logo.png" alt="Company logo">
-          <span class="page-title">
+    <a href="../index.html">
+       <figure class="logo">
+           <img src="../img/logo.png" alt="">
+           <span class="page-title">
             Sandbox
-          </span>
-        </figure>
-      </a>
-
-      <nav class="navbar">
+            </span>
+        </figure> 
+    </a>
+    <nav class="navbar">
         <ul class="menu-list">
-          <li class="menu-item">
-            <a href="components/buttons/index.html">Buttons</a>
-          </li>
-          <li class="menu-item">
-            <a href="components/cards/index.html">Cards</a>
-          </li>
-          <li class="menu-item">
-            <a href="components/forms/index.html">Forms</a>
-          </li>
-          <li class="menu-item">
-            <a href="components/sidebar/index.html">Sidebar</a>
-          </li>
-          <li class="menu-item">
-            <a href="login.html" class="button is-success is-small" style="margin-left:16px;">Login</a>
-          </li>
+             <li class="menu-item">
+                 <a href="../index.html">Home</a>
+             </li>
+             <li class="menu-item">
+                 <a href="products.html">Products</a>
+             </li>
+             <li class="menu__item--expandable">
+                 <span>Components</span>
+                 <ul class="menu__dropdown menu__list">
+                     <li class="dropdown__item">
+                         <a href="../components/buttons/buttons.html">Buttons</a>
+                     </li>
+                     <li class="dropdown__item">
+                         <a href="../components/cards/cards.html">Cards</a>
+                     </li>
+                     <li class="dropdown__item">
+                         <a href="../components/forms/index.html">Forms</a>
+                     </li>
+                     <li class="dropdown__item">
+                         <a href="../components/sidebar/dashboard.html">Sidebar</a>
+                     </li>
+                 </ul>
+             </li>   
+             <li class="menu-item">
+                 <a href="../register.html" class="button is-success">Login</a>
+             </li>   
         </ul>
-      </nav>
+    </nav>
+</header>
+  <div class="container">
+    <div>
+      <p style="font-size: .8125rem;
+      color: #4d4f53;
+      line-height: inherit;
+      margin: 10px;">
+      Grandes Eletrodomésticos <i class="fas fa-chevron-right"></i> Máquina de roupa
+      </p>
+      <span style="font-size: .875rem;
+      display: inline-block;
+      font-weight: 700;
+      line-height: 1;
+      padding-bottom: .3333333333rem;
+      padding-left: .5rem;">Máquinas de Lavar roupa</span>
+      </div>
+    <div class="container-full--product">
+    <div class="column is-5">
+      <div class="slider">
+        <figure class="slider-image">
+          <img src="../img/products-img/maquina1.jpg" alt="">
+        </figure>
+        <ul class="slider-items">
+          <li style="padding-top: 30px;"><i class="fas fa-chevron-left"></i></li>
+          <li><img src="../img/products-img/Sapatos_Stan_Smith.jpg" alt=""></li>
+          <li><img src="../img/products-img/Sapatos_Stan_Smith_Branc.jpg" alt=""></li>
+          <li><img src="../img/products-img/Sapatos_Stan_Smith_Branco.jpg" alt=""></li>
+          <li><img src="../img/products-img/Sapatos_Stan_Smith_Branco_Green.jpg" alt=""></li>
+          <li style="padding-top: 30px;"><i class="fas fa-chevron-right"></i></li>
+        </ul>
+      </div>
+      </div>
+      <div class="column is-7">
+      <div class="full--product--name">
+        <p>Forno BECKEN BBIO5046 (80 L - 595 cm - Hidrolítico - Inox)</p>
+        <div class="star">
+          <span><i class="fas fa-star"></i></span>
+          <span><i class="fas fa-star"></i></span>
+          <span><i class="fas fa-star"></i></span>
+          <span><i class="fas fa-star"></i></span>
+          <span><i class="far fa-star"></i></span>
+          <em class="n">(50)</em>
+        </div>
+        <img src="../img/products-img/class.energ.a" alt="">
+      </div>
     </div>
-  </header>
-
-  <main id="content">
-    <section class="section product-section">
-      <div class="container">
-        <div class="row">
-          <div class="column is-6">
-            <div class="slider">
-
-              <figure class="image slider-image">
-                <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-              </figure>
-              <ul class="slider-items">
-                <li class="slider-item">
-                  <figure class="image">
-                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                  </figure>
-                </li>
-                <li class="slider-item">
-                  <figure class="image">
-                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                  </figure>
-
-                </li>
-                <li class="slider-item">
-                  <figure class="image">
-                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                  </figure>
-
-                </li>
-                <li class="slider-item">
-                  <figure class="image">
-                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                  </figure>
-                </li>
-                <li class="slider-item">
-                  <figure class="image">
-                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                  </figure>
-                </li>
-              </ul>
-
-            </div>
-        </div>
-        <div class="column is-6">
-          <div class="product-detail">
-            <h3 class="title is-3">
-              Jogo Nintendo Switch Super Mario 3D World + Bowser's Fury
-            </h3>
-            <div class="stars">
-              <span class="icon">
-                <i class="fas fa-star"></i>
-              </span>
-              <span class="icon">
-                <i class="fas fa-star"></i>
-              </span>
-              <span class="icon">
-                <i class="fas fa-star"></i>
-              </span>
-              <span class="icon">
-                <i class="fas fa-star-half-alt"></i>
-              </span>
-              <span class="icon">
-                <i class="far fa-star"></i>
-              </span>
-            </div>
-
-            <div class="tabs-wrapper">
-              <ul class="tabs">
-                <li class="tab is-active">
-                  Sandbox
-                </li>
-                <li class="tab">
-                  Other offers
-                </li>
-              </ul>
-
-              <div class="tab-content">
-                <div class="row">
-                  <div class="column is-6">
-                    <p class="sales-price">$299</p>
-                    <p class="price">$399</span>
-                  </div>
-                  <div class="column is-6" style="padding:0">
-                    <button type="button" class="button is-primary is-large is-fullwidth">Add to cart</button>
-                  </div>
-                </div>
-
-                <p style="margin-bottom:16px;">
-                  <span class="has-text-green"> <i class="fas fa-star"
-                      style="display:inline-block;margin-right:4px;"></i>Disponível</span>
-                  Entrega estimada em 1 a 2 dias úteis
-
-                </p>
-                <a href="../index.html#product-row">See other products</a>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-      </div>
-
-    </section>
-
-  </main>
+  </div>
 </body>
 
 </html>
