--- a/Carlos/products/products.html
+++ b/Carlos/products/products.html
@@ -50,7 +50,7 @@
                      </ul>
                  </li>   
                  <li class="menu-item">
-                     <a href="register.html" class="button is-success">Login</a>
+                     <a href="../register.html" class="button is-success">Login</a>
                  </li>   
             </ul>
         </nav>
