--- a/Alexandre/index.html
+++ b/Alexandre/index.html
@@ -4,20 +4,19 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&amp;display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;0,900;1,900&display=swap" rel="stylesheet">
-          <title>MyPage</title>
-        <link rel="stylesheet" type="text/css" href="../css/main.css">
-        <link rel="stylesheet" type="text/css" href="../css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+            integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+            crossorigin="anonymous" />
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
   
     <body> 
         <header class="header">
-            <a href="../index.html">
+            <a href="index.html">
                 <span class="page-title">
                 Sandbox
                 </span>
@@ -27,22 +26,22 @@
             <nav class="navbar">
                 <ul class="menu-list">
                     <li class="menu-item">
-                    <a href="productlist.html">Products</a>
+                    <a href="products/productlist.html">Products</a>
                     </li>
                     <li class="menu-item">
-                    <a href="../components/buttons/buttons.html">Buttons</a>
+                    <a href="components/buttons/buttons.html">Buttons</a>
                     </li>
                     <li class="menu-item">
-                    <a href="../components/cards/cards.html">Cards</a>
+                    <a href="components/cards/cards.html">Cards</a>
                     </li>
                     <li class="menu-item">
-                    <a href="../components/forms/index.html">Forms</a>
+                    <a href="components/forms/index.html">Forms</a>
                     </li>
                     <li class="menu-item">
-                    <a href="../components/sidebar/dashboard.html">Sidebar</a>
+                    <a href="components/sidebar/dashboard.html">Sidebar</a>
                     </li>     
                     <li class="menu-item">
-                    <a href="../register.html" class="button is-success">Login</a>
+                    <a href="register.html" class="button is-success">Login</a>
                     </li>   
                 </ul>
             </nav>
